feat(stacks/kotlin-spring): Async + VT 섹션 추가 및 트랜잭션 룰 명확화
- Async + Virtual Threads 섹션 신설: @Async 사용/금지 기준, VT setup, @Async+@Transactional, anti-patterns
- VT 적용 범위 명시: I/O-bound 전용. CPU-bound 은 platform thread 또는 Dispatchers.Default — VT 무조건 default 금지
- Isolation 표현 정정: `READ_COMMITTED` → `Isolation.DEFAULT` (DB-delegated, Postgres/MySQL 각각 표기)
- REQUIRES_NEW 의미 명확화: async method 본인이 아닌 sync 자식 메서드에 의미 있음

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>